frontend/tests/cases/positive/interface-simple-22.gr
interface Simple a where
  simple : a -> a

data A = A | B

-- instance with guards
instance Simple A where
  simple A = A;
  | B = B
