frontend/tests/cases/negative/nameClashInterfaceFunProvidedByOtherInterface.gr
-- 'simple' is defined in distinct
-- interfaces
interface Simple a where
  simple : a -> a

interface Simple2 b where
  simple : b -> b
